--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -2,12 +2,14 @@
 
 :root {
   --green: #6EB7A9;
-  --doricWhite: #D5CFBD;
+  --doricWhite: #D5CFBD66;
+  --doricWhitefull: #D5CFBD;
   --sand: #ADA694;
   --white: #eee;
   --text-dark: #222;
   --text-light: #fff;
   --highlight: #008060;
+  --title-size: 45px;
 }
 
 * {
