--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -75,6 +75,7 @@ header nav {
 #tratamentos{
   display: flex;
   width: 100%;
+  justify-content: space-between;
   padding: 60px 100px 60px 100px;
 }
 #tratamentos-aside{
@@ -103,6 +104,7 @@ header nav {
 }
 #tratamentos-images{
   display: flex;
+  width: auto;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
@@ -110,6 +112,12 @@ header nav {
 #tratamentos-images img{
   width: 230px;
   height: auto;
+}
+.tratamentos-images-center{
+  display: block;
+  max-width: 270px;
+  margin-right: 0px;
+  justify-content: center;
 }
 .tratamentos-photos{
   margin: 20px;
