--- a/src/styles/mobile/tablet.css
+++ b/src/styles/mobile/tablet.css
@@ -1,105 +1,100 @@
-@media (min-width: 758px) and (max-width: 1267px) {
-    * {
-        font-family: 'Poppins', sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        text-decoration: none;
-        background: none;
-        border: none;
-    }
-
+@media (min-width: 758px) and (max-width: 1390px) {
     header {
         display: flex;
         width: 100%;
-        height: auto;
-        padding: 1rem;
-        justify-content: center;
+        height: 80px;
+        padding: 0px 2rem;
+        justify-content: space-between;
         align-items: center;
         background-color: var(--green);
     }
 
     .logo {
-        width: 15rem;
+        width: 30%;
+        max-width: 280px;
+        max-height: 90%;
         height: auto;
     }
 
     header a {
         color: var(--text-light);
-        font-size: 0px;
+        font-size: .8rem;
     }
 
     header nav {
         display: flex;
-        width: 0px;
+        width: 40%;
         height: auto;
-        gap: 40px;
+        gap: 5%;
         justify-content: space-between;
         align-items: center;
     }
 
     #div-navbar-buttons {
         display: flex;
-        width: 0px;
+        width: 30%;
         height: auto;
-        gap: 30px;
+        gap: 5%;
         justify-content: space-between;
         align-items: center;
     }
 
-    #div-navbar-buttons a,
-    img {
-        width: 0px;
+    #div-navbar-buttons img {
+        width: 100%;
     }
 
     #hero {
-        width: 100%;
-        height: auto;
         background-image: url(../../images/bg-main-1.JPG);
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     #opacity {
-        display: grid;
+        display: flex;
         width: 100%;
         height: 100%;
         justify-content: center;
         align-items: center;
-        background-color: #00000066;
         padding: 2rem;
+        background-color: #00000066;
     }
 
     #hero-aside {
-        display: grid;
+        display: none;
         gap: 20px;
-        width: 100%;
-        margin: auto;
-        justify-content: center;
-        align-items: center;
+        width: 50%;
+        max-width: 100%;
+        margin: 200px 0px 200px 100px;
     }
 
-    #hero-aside h1,
+    #hero-section {
+        display: grid;
+        width: 80%;
+        gap: 20px;
+        margin: 10rem 0rem 8rem 0rem;
+    }
+
+    #hero-section h1,
     p,
     a {
         color: var(--text-light);
     }
 
-    #hero-aside h1 {
-        font-size: 25px;
+    #hero-section h1 {
+        font-size: var(--title-size);
         font-weight: bold;
     }
 
-    #hero-aside p {
-        font-size: 20px;
+    #hero-section p {
+        font-size: 30px;
     }
 
-    #hero-aside a {
+    #hero-section a {
         display: flex;
-        width: 340px;
-        margin: auto;
+        width: 600px;
         height: 90px;
         font-size: 30px;
+        justify-self: center;
         justify-content: center;
         align-items: center;
         background-color: var(--green);
@@ -109,41 +104,44 @@
     #tratamentos {
         display: block;
         width: 100%;
-        justify-content: space-between;
+        justify-content: center;
         padding: 2rem;
     }
 
     #tratamentos-aside {
         display: block;
         width: 100%;
+        text-align: center;
         /* justify-content: center; */
         /* align-items: center; */
     }
 
     #tratamentos-aside h1 {
         width: 100%;
-        font-size: 25px;
+        font-size: var(--title-size);
         color: var(--green);
     }
 
     #tratamentos-aside h2 {
-        font-size: 20px;
+        font-size: 25px;
         font-weight: normal;
         text-justify: distribute;
         color: black;
     }
 
     #tratamentos-aside ul {
+        display: block;
         list-style: none;
         width: 100%;
+        text-align: center;
         /* word-wrap: normal; */
-        text-justify: distribute;
-        font-size: 15px;
+        /* text-justify: distribute; */
+        font-size: 20px;
     }
 
     .tratamentos-span {
         font-weight: bold;
-        font-size: 15px;
+        font-size: 20px;
     }
 
     #tratamentos-images {
@@ -151,11 +149,11 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        gap: 20px;
+        gap: 10px;
     }
 
     #tratamentos-images img {
-        width: 70px;
+        width: 140px;
         margin: auto;
         padding: auto;
         height: auto;
@@ -174,7 +172,7 @@
         border-radius: 50px;
     }
 
-    #dra-alessandra {
+   #dra-alessandra {
         display: flex;
         width: 100%;
         gap: 2rem;
@@ -186,7 +184,7 @@
     }
 
     #dra-alessandra-image {
-        width: 80%;
+        width: 50%;
         height: auto;
         border-radius: 20px;
     }
@@ -199,12 +197,12 @@
     }
 
     #dra-alessandra-aside h1 {
-        font-size: 25px;
+        font-size: var(--title-size);
         color: var(--green);
     }
 
     #dra-alessandra-aside h2 {
-        font-size: 20px;
+        font-size: 25px;
         font-weight: normal;
     }
 
@@ -248,13 +246,13 @@
     #texts {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: .2rem;
         justify-content: center;
         align-items: start;
     }
 
     #texts h1 {
-        font-size: 25px;
+        font-size: var(--title-size);
         color: var(--green);
     }
 
@@ -263,6 +261,7 @@
         color: black;
         text-justify: distribute;
     }
+
 
     .carousel {
         position: relative;
@@ -361,32 +360,32 @@
 
     #depoimentos {
         display: flex;
-        padding: 1rem;
-        gap: 50px;
+        padding: 60px 100px 60px 100px;
+        gap: 100px;
+        text-align: center;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
     #depoimentos h1 {
-        text-justify: auto;
-        font-size: 25px;
+        font-size: var(--title-size);
         color: var(--green);
     }
 
     #depoimentos-a {
         display: flex;
-        width: 90%;
+        width: 100%;
         height: 90px;
         background-color: var(--green);
         justify-content: center;
         align-items: center;
         color: var(--text-light);
-        font-size: 25px;
+        font-size: 30px;
         border-radius: 20px;
     }
 
-    #contato {
+   #contato {
         display: flex;
         padding: 1rem;
         justify-content: space-between;
@@ -419,12 +418,10 @@
         font-size: 15px;
         color: var(--text-dark);
     }
-
-    iframe {
+    iframe{
         width: 30%;
         height: auto;
     }
-
     footer {
         width: 100%;
         background-color: var(--green);
@@ -473,8 +470,7 @@
         width: auto;
         height: 100%;
     }
-
-    .footer-whatsapp a img {
+        .footer-whatsapp a img{
         width: auto;
         height: 100%;
     }
